server load balancing using nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,15 +16,30 @@ services:
 
   web:
     build: .
+    container_name: django_web
     command: python manage.py runserver 0.0.0.0:8000
-    ports:
-      - "8000:8000"
-    depends_on:
-      - db
     environment:
       - DATABASE_URL=postgres://youtube_admin:admin@db:5432/youtube_video_fetcher
+    depends_on:
+      - db
     volumes:
       - .:/app
+    expose:
+      - "8000"
+    deploy:
+      replicas: 3
+      restart_policy:
+        condition: on-failure
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - web
 
 volumes:
   postgres_data:
